# skin-scan-ai

backend/: .gitignore  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/routes/: chatbot.py  health.py  heatmap.py  predict.py  report.py  risk.py
backend/app/core/: logger.py  settings.py
backend/app/models/: inference.py  model_loader.py
backend/app/rag/: agent.py  document_loader.py  embedding_model.py  groq_client.py  retriever.py  text_splitter.py  vector_store.py
backend/app/schemas/: chatbot_schema.py  prediction_schema.py  report_schema.py  risk_schema.py
backend/app/services/: heatmap_service.py  prediction_service.py  rag_chat_service.py  report_service.py  risk_service.py
backend/app/utils/: gradcam.py  helpers.py  image_processing.py
backend/model/: labels.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AnalysisProgress.tsx  Chatbot.tsx  HeatmapViewer.tsx  ImageUpload.tsx  NavBar.tsx  PageLayout.tsx  ReportGenerator.tsx  ResultCard.tsx  RiskCalculator.tsx  RiskResultCard.tsx
frontend/src/pages/: ChatbotPage.tsx  Dashboard.tsx  HeatmapPage.tsx  Index.tsx  PredictionPage.tsx  ReportPage.tsx  RiskPage.tsx  WelcomePage.tsx
frontend/src/utils/: api.ts
